# arithmetic_compression_wizard

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: README.md  advanced_features_demo.rs  basic_compression_demo.rs  file_compression_demo.rs  interactive_demo.rs  quick_start.rs
src/: Shakespeare William. Hamlet Prince of Denmark.txt  lib.rs  main.rs
src/bit_wizardry/: bit_manipulation_spells.rs  mod.rs
src/compression_engine/: compression_conjurer.rs  mod.rs
src/decompression_oracle/: decompression_sage.rs  mod.rs
